# QoolTester

./: CMakeLists.txt  README.md
assets/: gui_main.ui  icon.rc
assets/documents/: DroneTest.qlpro  DroneTest_res.qlpro
src/: main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  reporter.cpp  reporter.h  utils.cpp  utils.h
